--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Simple Async Task</string>
     <string name="i_am_ready_to_start_work">I am ready to start work!</string>
     <string name="start_task">Start task</string>
+    <string name="napping">Napping...</string>
 </resources>
